Fixed card buttons position to bottom by flex box

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/leadership.jpg"
                                             class="card-img-top sp-rounded-top-15" alt="Leadership illustration">
-                                        <div class="card-body sp-rounded-bottom-15">
+                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 LeaderShip</h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -229,7 +229,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/communication.jpg"
                                             class="card-img-top sp-rounded-top-15" alt="Communication Illustration">
-                                        <div class="card-body sp-rounded-bottom-15">
+                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 Comminication</h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -245,7 +245,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/technologie.jpg"
                                             class="card-img-top sp-rounded-top-15" alt="Infographie Illustration">
-                                        <div class="card-body sp-rounded-bottom-15">
+                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 Infographie</h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -261,7 +261,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/emailing.jpg" class="card-img-top sp-rounded-top-15"
                                             alt="Emailing Illustration">
-                                        <div class="card-body sp-rounded-bottom-15">
+                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 Emailing </h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -277,7 +277,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/teamWorking.png"
                                             class="card-img-top sp-rounded-top-15" alt="Work in Team">
-                                        <div class="card-body sp-rounded-bottom-15">
+                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 Travail en equipe</h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -293,7 +293,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/seo.jpg" class="card-img-top sp-rounded-top-15"
                                             alt="Seo Illustration">
-                                        <div class="card-body sp-rounded-bottom-15">
+                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 Referencement web</h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -411,7 +411,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/leadership.jpg"
                                             class="card-img-top sp-rounded-top-15" alt="Leadership Illustration">
-                                        <div class="card-body sp-rounded-bottom-15">
+                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 LeaderShip</h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -427,7 +427,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/communication.jpg"
                                             class="card-img-top sp-rounded-top-15" alt="Communication Illustration">
-                                        <div class="card-body sp-rounded-bottom-15">
+                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 Comminication</h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -443,7 +443,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/technologie.jpg"
                                             class="card-img-top sp-rounded-top-15" alt="Infographie Illustration">
-                                        <div class="card-body sp-rounded-bottom-15">
+                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 Infographie</h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -459,7 +459,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/emailing.jpg" class="card-img-top sp-rounded-top-15"
                                             alt="Emailing Illustration">
-                                        <div class="card-body sp-rounded-bottom-15">
+                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 Emailing </h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -475,7 +475,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/teamWorking.png"
                                             class="card-img-top sp-rounded-top-15" alt="Work in Team Illustration">
-                                        <div class="card-body sp-rounded-bottom-15">
+                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 Travail en equipe</h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -491,7 +491,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/seo.jpg" class="card-img-top sp-rounded-top-15"
                                             alt="Web Referencement Illustration">
-                                        <div class="card-body sp-rounded-bottom-15">
+                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 Referencement web</h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -532,11 +532,10 @@
                         laudantium deserunt asperiores aliquid ratione dolorum placeat omnis hic enim aperiam ducimus,
                         labore aliquam. Vitae, adipisci ea accusam..
                     </p>
-                    <div class="row me-0 row-cols-sm-1 sp-row-cols-md-3 ">
+                    <div class="row me row-cols-1 row-cols-sm-2 row-cols-md-3 ">
                         <div class="my-3  justify-content-center ">
                             <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
-                                <div class="card-header sp-bg-red  sp-rounded-top-15 emailing">
-                                    <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">Emailing</h5>
+                                <div class="card-header sp-bg-red  sp-rounded-top-15">
                                     <p class=" text-uppercase fw-bold text-white sp-text-sm">
                                         Ecole IA Microsoft By
                                         Simplon -
@@ -546,7 +545,7 @@
                                     <img class="dropdown-icon" src="./formations/img/SVG/dropdown-svgrepo-com.svg"
                                         width="30" height="30" alt="dropdown icon">
                                 </div>
-                                <div class="card-body sp-rounded-bottom-15">
+                                <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
                                     <img class="logo-partenaire my-3 img-fluid"
                                         src="./formations/img/miscrosoftLogo.png" width="150" alt="logo microsoft">
                                     <p class="card-text">
@@ -563,8 +562,7 @@
                         </div>
                         <div class="my-3  justify-content-center ">
                             <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
-                                <div class="card-header sp-bg-red  sp-rounded-top-15 emailing">
-                                    <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">Emailing</h5>
+                                <div class="card-header sp-bg-red  sp-rounded-top-15">
                                     <p class=" text-uppercase fw-bold text-white sp-text-sm">
                                         AI Business School TPE/
                                         PME - Développeur.euse
@@ -574,7 +572,7 @@
                                     <img class="dropdown-icon" src="./formations/img/SVG/dropdown-svgrepo-com.svg"
                                         width="30" height="30" alt="dropdown icon">
                                 </div>
-                                <div class="card-body sp-rounded-bottom-15">
+                                <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
                                     <img class="logo-partenaire my-3 img-fluid" src="./formations/img/IESELogo.png"
                                         width="100" alt="logo iese">
                                     <p class="card-text">
@@ -594,8 +592,7 @@
                         </div>
                         <div class="my-3  justify-content-center ">
                             <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
-                                <div class="card-header sp-bg-red  sp-rounded-top-15 emailing">
-                                    <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">Emailing</h5>
+                                <div class="card-header sp-bg-red  sp-rounded-top-15">
                                     <p class=" text-uppercase fw-bold text-white sp-text-sm">
                                         AI Business School TPE/
                                         PME - Développeur.euse
@@ -605,7 +602,7 @@
                                     <img class="dropdown-icon" src="./formations/img/SVG/dropdown-svgrepo-com.svg"
                                         width="30" height="30" alt="dropdown icon">
                                 </div>
-                                <div class="card-body sp-rounded-bottom-15">
+                                <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
                                     <img class="logo-partenaire my-3 img-fluid"
                                         src="./formations/img/miscrosoftLogo.png" width="150" alt="logo microsoft">
                                     <p class="card-text">
