Fixed Responsivity regard to new design for medium screen

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="input-group my-3">
                     <input type="text" class="form-control sp-input-shadow" placeholder="Rechercher une formation"
                         aria-label="Recipient's username" aria-describedby="basic-addon2">
-                    <span class="input-group-text sp-btn-danger" id="basic-addon2"><i class="bi bi-search   text-white"
+                    <span class="input-group-text sp-btn-danger" id="basic-addon2"><i class="bi bi-search   text-black"
                             aria-hidden="true"></i></span>
                 </div>
             </div>
@@ -213,7 +213,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/leadership.jpg"
                                             class="card-img-top sp-rounded-top-15" alt="Leadership illustration">
-                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
+                                        <div class="card-body sp-rounded-bottom-15">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 LeaderShip</h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -229,7 +229,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/communication.jpg"
                                             class="card-img-top sp-rounded-top-15" alt="Communication Illustration">
-                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
+                                        <div class="card-body sp-rounded-bottom-15">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 Comminication</h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -245,7 +245,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/technologie.jpg"
                                             class="card-img-top sp-rounded-top-15" alt="Infographie Illustration">
-                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
+                                        <div class="card-body sp-rounded-bottom-15">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 Infographie</h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -261,7 +261,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/emailing.jpg" class="card-img-top sp-rounded-top-15"
                                             alt="Emailing Illustration">
-                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
+                                        <div class="card-body sp-rounded-bottom-15">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 Emailing </h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -277,7 +277,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/teamWorking.png"
                                             class="card-img-top sp-rounded-top-15" alt="Work in Team">
-                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
+                                        <div class="card-body sp-rounded-bottom-15">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 Travail en equipe</h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -293,7 +293,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/seo.jpg" class="card-img-top sp-rounded-top-15"
                                             alt="Seo Illustration">
-                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
+                                        <div class="card-body sp-rounded-bottom-15">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 Referencement web</h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -411,7 +411,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/leadership.jpg"
                                             class="card-img-top sp-rounded-top-15" alt="Leadership Illustration">
-                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
+                                        <div class="card-body sp-rounded-bottom-15">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 LeaderShip</h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -427,7 +427,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/communication.jpg"
                                             class="card-img-top sp-rounded-top-15" alt="Communication Illustration">
-                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
+                                        <div class="card-body sp-rounded-bottom-15">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 Comminication</h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -443,7 +443,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/technologie.jpg"
                                             class="card-img-top sp-rounded-top-15" alt="Infographie Illustration">
-                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
+                                        <div class="card-body sp-rounded-bottom-15">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 Infographie</h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -459,7 +459,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/emailing.jpg" class="card-img-top sp-rounded-top-15"
                                             alt="Emailing Illustration">
-                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
+                                        <div class="card-body sp-rounded-bottom-15">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 Emailing </h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -475,7 +475,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/teamWorking.png"
                                             class="card-img-top sp-rounded-top-15" alt="Work in Team Illustration">
-                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
+                                        <div class="card-body sp-rounded-bottom-15">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 Travail en equipe</h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -491,7 +491,7 @@
                                     <div class="card shadow-sm h-100 text-center sp-rounded-top-15 sp-rounded-bottom-15">
                                         <img src="./formations/img/seo.jpg" class="card-img-top sp-rounded-top-15"
                                             alt="Web Referencement Illustration">
-                                        <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
+                                        <div class="card-body sp-rounded-bottom-15">
                                             <h5 class="card-title center text-uppercase fw-bold sp-red sp-text-sm">
                                                 Referencement web</h5>
                                             <p class="card-text">Some quick example text to build on the card title and
@@ -545,7 +545,7 @@
                                     <img class="dropdown-icon" src="./formations/img/SVG/dropdown-svgrepo-com.svg"
                                         width="30" height="30" alt="dropdown icon">
                                 </div>
-                                <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
+                                <div class="card-body sp-rounded-bottom-15">
                                     <img class="logo-partenaire my-3 img-fluid"
                                         src="./formations/img/miscrosoftLogo.png" width="150" alt="logo microsoft">
                                     <p class="card-text">
@@ -572,7 +572,7 @@
                                     <img class="dropdown-icon" src="./formations/img/SVG/dropdown-svgrepo-com.svg"
                                         width="30" height="30" alt="dropdown icon">
                                 </div>
-                                <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
+                                <div class="card-body sp-rounded-bottom-15">
                                     <img class="logo-partenaire my-3 img-fluid" src="./formations/img/IESELogo.png"
                                         width="100" alt="logo iese">
                                     <p class="card-text">
@@ -602,7 +602,7 @@
                                     <img class="dropdown-icon" src="./formations/img/SVG/dropdown-svgrepo-com.svg"
                                         width="30" height="30" alt="dropdown icon">
                                 </div>
-                                <div class="card-body sp-rounded-bottom-15 d-flex flex-column justify-content-around align-items-center">
+                                <div class="card-body sp-rounded-bottom-15">
                                     <img class="logo-partenaire my-3 img-fluid"
                                         src="./formations/img/miscrosoftLogo.png" width="150" alt="logo microsoft">
                                     <p class="card-text">
@@ -631,19 +631,19 @@
     <!-- End Main -->
     <!-- Section footer -->
     <footer class="sp-footer ">
-        <div class=" pt-5 mt-5 d-sm-inline-block d-md-flex text-white justify-md-content-around">
-            <div class="col logo-icons d-md-flex px-3">
-                <img src="./formations/img/logoWhiteSimplon.svg" alt="Logo simplon format blanc" width="150">
-                <div class="icons my-5">
+        <div class="row pt-5 mt-5 text-white d-inline-block row-cols-1 row-cols-sm-2 row-cols-lg-4 d-sm-flex justfy-sm-content-around w-100 gap-0 gap-sm-0 ps-5">
+            <div class="logo-icons col col ps-md-0 px-lg-0  my-2 d-lg-flex text-sm-start">
+                <img src="./formations/img/logoWhiteSimplon.svg"  class="mx-lg-auto mx-auto mx-sm-0" alt="Logo simplon format blanc" width="150">
+                <div class="icons my-5 mx-0 mx-auto mx-sm-0 mx-lg-auto">
                     <i class="bi bi-facebook  facebook-color"></i>
                     <i class="bi bi-twitter twitter-color"></i>
                     <i class="bi bi-youtube youtube-color"></i>
                     <i class="bi bi-instagram instagram-color"></i>
                 </div>
             </div>
-            <div class="col px-3">
+            <div class="col px-ms-0 my-2 my-lg-0 text-center text-sm-start">
                 <p>
-                    <a href="" class="d-block sp-link-light fs-4">Voir plus</a>
+                    <a href="" class="d-block sp-link-light fs-3 mt-3 mb-0 mt-lg-0">Voir plus</a>
                 </p>
                 <p>
                     <a href="" class="d-block sp-link-light my-2">Conditions d'utilisation</a>
@@ -652,8 +652,8 @@
                     <a href="" class="d-block sp-link-light my-2">FAQ</a>
                 </p>
             </div>
-            <div class="col px-3">
-                <p class="d-block sp-link-light fs-4">Cordonnees</p>
+            <div class="col px-lg-0 my-2 my-lg-0 text-center text-sm-start">
+                <p class="d-block sp-link-light fs-3 mt-3 mb-0 mt-lg-0">Cordonnees</p>
                 <p class="d-block sp-link-light ">Cite Keur Goor Gui ,<br> Sicap Liberte 6,<br> Dakar Senegal</p>
                 <p>
                     <a href="" class="d-block sp-link-light my-2">simplon@gmail.com</a>
@@ -661,8 +661,8 @@
                 </p>
                 <p class="d-block ">(+221) 33 234 43 32 <br> (+221) 88 348 98 43 32</p>
             </div>
-            <div class="col px-3">
-                <p class="d-block sp-link-light fs-4">Notre Newsletter</p>
+            <div class="col px-lg-0 my-2 my-lg-0 text-center text-sm-start ">
+                <p class="d-block sp-link-light fs-3 mt-3 mb-0 mt-lg-0">Notre Newsletter</p>
                 <p id="newsletter-text">Souscrivez vous à notre newsletter pour ne pas manquer aucune de nos acticites
                 </p>
                 <p class="sp-input-group">
@@ -674,7 +674,7 @@
         <div
             class="copyright text-white p-3 d-flex align-items-center flex-column flex-sm-row justify-content-between">
             <span>© 2021 Simplon. All rights reserved.</span>
-            <span class=" ">made with <i class="bi bi-suit-heart-fill text-white"></i> <strong> by
+            <span class=" ">made with <i class="bi bi-suit-heart-fill text-black"></i> <strong> by
                     SimplonP4</strong></span>
         </div>
     </footer>
